CMNEW-119 fix(core): finalize definition type values
- remove deprecated REST/REST_MULTIPLE/SWAGGER enum values
- rename SERVICE_DOMAIN_MEMBER to SVC_DOMAIN_MEMBER for DB compatibility
- keep domain membership separate from inbound route exposure
- ensure REST routes are created only from inbound route definitions
- update runtime docs and focused tests